--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will Segura Que Me Quieres?</title>
+    <title>Segura Que Me Quieres?</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap">
     <link rel="stylesheet" href="style.css"> <!-- Link to external stylesheet -->
 </head>
@@ -11,10 +11,11 @@
     <div id="container">
         <div id="image-container"></div> <!-- Container for displaying images -->
         <div id="text-container">
-            <div id="question">Segura Que Me Quieres?</div> <!-- Question -->
+            <div id="question">¿Segura que me Quieres?</div> <!-- Question -->
             <div id="options">
-                <button id="yes-button" onclick="selectOption('SI')">Yes</button> <!-- Yes button -->
-                <button id="no-button" onclick="selectOption('NO')">No</button> <!-- No button -->
+                <button id="yes-button" onclick="selectOption('SI')">SÍ</button> 
+                <button id="no-button" onclick="selectOption('NO')">NO</button>
+
             </div>
         </div>
     </div>
